:construction_worker: ajustando

--- a/contenido/pag14.html
+++ b/contenido/pag14.html
@@ -7,6 +7,73 @@
     <title>Página 14</title>
 </head>
 <body>
-    Página 14
+    <div id="cont-info14">
+        <div id="cont-caracteristicas">
+            <div class="globo">
+                <p>
+                    La Compañía está obligadas a contar con un sistema automatizado, el cual debe: 
+                </p>
+                <ul>
+                    <li>Tener un estricto control en las operaciones e información de los Clientes.</li>
+                    <li>Ser un instrumento útil para la detección y clasificación de las Operaciones relevantes, inusuales e internas  preocupantes.</li>
+                    <li>Servir como enlace para los reportes ante 
+                        la CNSF.</li>
+                    <li>Simplificar procesos internos para gestionar 
+                        el cumplimiento a las Disposiciones.</li>
+                    <li>Identificar a las personas en las Listas Oficiales que emiten las autoridades competentes.</li>
+                    <li>Ejecutar la Metodología de Evaluación 
+                        de Riesgos.</li>
+                </ul>
+            </div>
+            <figure class="cont-imagen">
+                <img src="./build/img/contenido/Pag14/persona.svg" alt="persona">
+            </figure>
+            <div class="instrucciones-mano">
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag14/Mano.svg" alt="mano">
+                </figure>
+                <p>Da clic en cada botón para conocer más funciones de los sistemas automatizados.</p>
+            </div>
+        </div>
+
+       <div id="contenido-info">
+            <div class="cont-computadoras">
+                <figure id="pc-1" class="cont-imagen">
+                    <img src="/build/img/contenido/Pag14/pc-verde.svg" alt="pc">
+                </figure>
+                <figure id="pc-2" class="cont-imagen">
+                    <img src="/build/img/contenido/Pag14/pc-naranja.svg" alt="pc">
+                </figure>
+                <figure id="pc-3" class="cont-imagen">
+                    <img src="/build/img/contenido/Pag14/pc-azul.svg" alt="pc">
+                </figure>
+                <figure id="pc-4" class="cont-imagen">
+                    <img src="/build/img/contenido/Pag14/pc-amarilla.svg" alt="pc">
+                </figure>
+                <figure id="pc-5" class="cont-imagen">
+                    <img src="/build/img/contenido/Pag14/pc-gris.svg" alt="pc">
+                </figure>
+                <figure id="pc-6" class="cont-imagen">
+                    <img src="/build/img/contenido/Pag14/pc-azulRey.svg" alt="pc">
+                </figure>
+                <figure id="pc-7" class="cont-imagen">
+                    <img src="/build/img/contenido/Pag14/pc-amarilla.svg" alt="pc">
+                </figure>
+                <figure id="pc-8" class="cont-imagen">
+                    <img src="/build/img/contenido/Pag14/pc-azul.svg" alt="pc">
+                </figure>
+                <figure id="pc-9" class="cont-imagen">
+                    <img src="/build/img/contenido/Pag14/pc-naranja.svg" alt="pc">
+                </figure>
+                <figure id="pc-10" class="cont-imagen">
+                    <img src="/build/img/contenido/Pag14/pc-verde.svg" alt="pc">
+                </figure>
+            </div>
+
+            <div id="info-computadoras">
+                
+            </div>
+       </div>
+    </div>
 </body>
 </html>
