--- a/contenido/pag12.html
+++ b/contenido/pag12.html
@@ -82,18 +82,18 @@
         <div id="cont-02-flipCards">
             <div class="cards" id="flip1">
                 <div class="front caras">
-                    <div class="cont-titulo">
-                        <h3 class="aseguradora">Aseguradora</h3>
+                    <div class="cont-titulo" id="aseguradora">
+                        <h3>Aseguradora</h3>
                     </div>
                     <figure class="cont-imagen">
                         <img src="./build/img/contenido/Pag12/flip-card01.svg" alt="Flip Card">
                     </figure>
                 </div>
                 <div class="back caras">
-                    <div class="cont-titulo">
-                        <h3 class="aseguradora">Aseguradora</h3>
+                    <div class="cont-titulo" id="aseguradora">
+                        <h3>Aseguradora</h3>
                     </div>
-                    <div class="cont-mensaje-back" id="cont-aseguradora">
+                    <div class="cont-mensaje-back" id="aseguradora">
                         <li>Aplicar políticas de identificación y conocimiento.</li>
                         <li>Dar seguimiento a las operaciones que se realicen en ella.</li>
                         <li>Reportar las operaciones relevantes, inusuales o internas preocupantes. </li>
@@ -102,7 +102,7 @@
             </div>
             <div class="cards" id="flip2">
                 <div class="front caras">
-                    <div class="cont-titulo">
+                    <div class="cont-titulo" id="transacciones">
                         <h3>Transacciones</h3>
                     </div>
                     <figure class="cont-imagen">
@@ -110,10 +110,10 @@
                     </figure>
                 </div>
                 <div class="back caras">
-                    <div class="cont-titulo">
+                    <div class="cont-titulo" id="transacciones">
                         <h3>Transacciones</h3>
                     </div>
-                    <div class="cont-mensaje-back" id="cont-transacciones">
+                    <div class="cont-mensaje-back" id="transacciones">
                         <li>Cuidar el registro adecuado del día, hora, plaza, sujetos involucrados, cuentas, contratos,
                             montos, moneda en el que
                             se realice la operación.</li>
