:pencil2: ajustando pag14

--- a/contenido/pag14.html
+++ b/contenido/pag14.html
@@ -37,7 +37,7 @@
         </div>
 
        <div id="contenido-info">
-            <div class="cont-computadoras">
+            <!-- <div class="cont-computadoras"> -->
                 <figure id="pc-1" class="cont-imagen">
                     <img src="/build/img/contenido/Pag14/pc-verde.svg" alt="pc">
                 </figure>
@@ -68,11 +68,10 @@
                 <figure id="pc-10" class="cont-imagen">
                     <img src="/build/img/contenido/Pag14/pc-verde.svg" alt="pc">
                 </figure>
-            </div>
-
-            <div id="info-computadoras">
+                <div id="info-computadoras">
                 
-            </div>
+                </div>
+            <!-- </div> -->
        </div>
     </div>
 </body>
