--- a/contenido/pag15.html
+++ b/contenido/pag15.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página 15</title>
 </head>
+
 <body>
-    Página 15
+    <div id="instrucciones">
+        <figure class="mano">
+            <img src="./build/img/contenido/Pag15/mano.svg" alt="Mano">
+        </figure>
+        <p>Da clic en cada colega para conocer más detalles sobre tus deberes de confidencialidad.</p>
+    </div>
+    <div id="cont-verde">
+        <a class="btn_cuadros12" href="#globo1">
+            <figure class="personaje1">
+                <img src="./build/img/contenido/Pag15/personaje1.svg" alt="Personaje">
+            </figure>
+        </a>
+        <div class ="globos12" id="globo1">
+            1. Deberás mantener confidencialidad respecto de la información de envío de reportes o requerimientos de
+            información y documentación, a la CNSF y demás autoridades facultadas para la prevención, investigación,
+            persecución y sanción en materia de Lavado de Dinero.
+        </div>
+    </div>
+    <div id="columnas">
+        <div id="cont-azul">
+            <a class="btn_cuadros12" href="#globo2">
+                <figure class="personaje2">
+                    <img src="./build/img/contenido/Pag15/personaje3.svg" alt="Personaje">
+                </figure>
+            </a>
+            <div class ="globos12" id="globo2">
+                2. Debes comprometerte a no comentar o proporcionar por cualquier medio, datos
+                y documentos que integran los expedientes de identificación de los Clientes, así como los registros de
+                operaciones.
+            </div>
+        </div>
+        <div id="cont-gris">
+            <div id="cont-img">
+                <div class ="globos12" id="globo3">
+                    3. Puedes reportar las operaciones inusuales realizadas por colaboradores, Cedentes, proveedores,
+                    contratistas o cualquier otro con vínculos con la aseguradora o reaseguradora
+                    a los siguientes correos:
+                </div>
+                <div id="correo">
+                    <p>oficialdecumplimiento@patriare.com.mx</p>
+                    <p>oficialdecumplimiento@gseguros.com.mx</p>
+                    <p>oficialdecumplimiento@gsalud.com.mx</p>
+                </div>
+                <a class="btn_cuadros12" href="#globo3">
+                    <figure class="personaje3">
+                        <img src="./build/img/contenido/Pag15/personaje2.svg" alt="Personaje">
+                    </figure>
+                </a>
+            </div>
+            <div id="cont-rojo">
+                <figure class="warning">
+                    <img src="./build/img/contenido/Pag15/warning.svg" alt="Warning">
+                </figure>
+                <p>El incumplimiento de lo señalado en los numerales 1 y 2 puede derivar en la aplicación
+                    de medidas disciplinarias.</p>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
