:construction_worker: diseño 24.1

--- a/contenido/pag14.html
+++ b/contenido/pag14.html
@@ -151,7 +151,7 @@
            <div class="cont-botones-info" id="cont-info1">
                <a href="#info-m1" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane1">
-                        <img src="/build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
                 <div class="cuadros-info-movil" id="info-m1">
@@ -163,7 +163,7 @@
            <div class="cont-botones-info" id="cont-info2">
                <a href="#info-m2" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane2">
-                        <img src="/build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
                 <div class="cuadros-info-movil" id="info-m2">
@@ -175,7 +175,7 @@
            <div class="cont-botones-info" id="cont-info3">
                <a href="#info-m3" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane3">
-                        <img src="/build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
                 <div class="cuadros-info-movil" id="info-m3">
@@ -187,7 +187,7 @@
            <div class="cont-botones-info" id="cont-info4">
                <a href="#info-m4" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane4">
-                        <img src="/build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
                 <div class="cuadros-info-movil" id="info-m4">
@@ -199,7 +199,7 @@
            <div class="cont-botones-info" id="cont-info5">
                <a href="#info-m5" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane5">
-                        <img src="/build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
                 <div class="cuadros-info-movil" id="info-m5">
@@ -211,7 +211,7 @@
            <div class="cont-botones-info" id="cont-info6">
                <a href="#info-m6" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane6">
-                        <img src="/build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
                 <div class="cuadros-info-movil" id="info-m6">
@@ -223,7 +223,7 @@
            <div class="cont-botones-info" id="cont-info7">
                <a href="#info-m7" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane7">
-                        <img src="/build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
                 <div class="cuadros-info-movil" id="info-m7">
@@ -235,7 +235,7 @@
            <div class="cont-botones-info" id="cont-info8">
                <a href="#info-m8" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane8">
-                        <img src="/build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
                 <div class="cuadros-info-movil" id="info-m8">
@@ -247,7 +247,7 @@
            <div class="cont-botones-info" id="cont-info9">
                <a href="#info-m9" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane9">
-                        <img src="/build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
                 <div class="cuadros-info-movil" id="info-m9">
@@ -259,7 +259,7 @@
            <div class="cont-botones-info" id="cont-info10">
                <a href="#info-m10" class="btn-info-movil">
                     <figure class="cont-imagen" id="engrane10">
-                        <img src="/build/img/contenido/Pag14/engrane.svg" alt="engrane">
+                        <img src="./build/img/contenido/Pag14/engrane.svg" alt="engrane">
                     </figure>
                 </a>
             <div class="cuadros-info-movil" id="info-m10">
