--- a/contenido/pag24.html
+++ b/contenido/pag24.html
@@ -7,6 +7,89 @@
     <title>Página 24</title>
 </head>
 <body>
-    Página 24
+    <div id="cont-intro24">
+        <div id="cont-mensaje1">
+            <div class="cont-globo">
+                <div class="globo">
+                    <p>En el Lavado de  Dinero SIEMPRE existe un delito previo o subyacente, es decir, un delito que genera el producto susceptible de ser lavado. Estas son actividades ilícitas previas generadoras de patrimonio, recursos, bienes o derechos que buscan ser legitimados.</p>
+                </div>
+            </div>
+            <figure class="cont-imagen">
+                <img src="./build/img/contenido/Pag24/mujer.svg" alt="mujer">
+            </figure>
+        </div>
+
+        <div id="cont-info24">
+            <div class="indicaciones">
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag24/Mano.svg" alt="mano">
+                </figure>
+                <div class="parrafos">
+                    <p>A continuación encontrarás algunos delitos previos al delito de Lavado de Dinero.
+                    </p>
+                    <p>Da clic en cada tarjeta para conocer más.</p>
+                </div>
+            </div>
+
+            <div id="cont-flipcard">
+                <div class="flipcard" id="flip1">
+                    <div class="front caras">
+                        <div class="cont-imagen">
+                            <img src="./build/img/contenido/Pag24/preso.svg" alt="preso">
+                        </div>
+                    </div>
+                    <div class="back caras">
+                        <p>Tráfico de armas, defraudación fiscal y narcotráfico.
+                        </p>
+                    </div>
+                </div>
+                <div class="flipcard" id="flip2">
+                    <div class="front caras">
+                        <div class="cont-imagen">
+                            <img src="./build/img/contenido/Pag24/preso.svg" alt="preso">
+                        </div>
+                    </div>
+                    <div class="back caras">
+                        <p>Secuestro, contrabando y corrupción.</p>
+                    </div>
+                </div>
+                <div class="flipcard" id="flip3">
+                    <div class="front caras">
+                        <div class="cont-imagen">
+                            <img src="./build/img/contenido/Pag24/preso.svg" alt="preso">
+                        </div>
+                    </div>
+                    <div class="back caras">
+                        <p>Trata de personas, falsificación y piratería. </p>
+                    </div>
+                </div>
+                <div class="flipcard" id="flip4">
+                    <div class="front caras">
+                        <div class="cont-imagen">
+                            <img src="./build/img/contenido/Pag24/preso.svg" alt="preso">
+                        </div>
+                    </div>
+                    <div class="back caras">
+                        <p>Fraude, extorsión y robo de hidrocarburos.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="titulo">
+                <h4>Tipificación del Lavado de Dinero en el Código Penal Federal</h4>
+            </div>
+
+            <div id="cont-mensaje2">
+                <div id="cont-globo">
+                    <div class="globo">
+                        <p>En nuestro país, el tipo penal del delito de Lavado de Dinero se encuentra previsto en el Art. 400 bis del Código Penal Federal, conocido como delito de operaciones con recursos de procedencia ilícita.</p>
+                    </div>
+                </div>
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag24/hombre.svg" alt="hombre">
+                </figure>
+            </div>
+        </div>        
+    </div>   
 </body>
 </html>
