--- a/contenido/pag17.html
+++ b/contenido/pag17.html
@@ -41,11 +41,22 @@
                     Recuerda que la Compañía cuenta con un <b>Buzón de Denuncia</b> para operaciones internas preocupantes o inusuales que te permite enviar directamente, al área a cargo del Oficial de Cumplimiento, avisos sobre operaciones o conductas que detectes de cualquiera, de otros Colaboradores, Clientes o Agentes, identificadas como Operaciones Inusuales u Operaciones Internas Preocupantes, presentadas de forma aislada o reiterada.
                 </p>
                 <div class="persona2">
-                    <figure>
+                    <figure class="p2">
                         <img src="/src/img/contenido/Pag17/persona2.svg" alt="persona 2">
                     </figure>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="intranet">
+        <figure class="persona-computadora">
+            <img src="/src/img/contenido/Pag17/persona-computadora.svg" alt="persona computadora">
+        </figure>
+        <div class="dialogo3">
+            <p>
+                En la intranet de las Aseguradoras y de la Reaseguradora, se cuenta con el Buzón de Denuncia para operaciones internas preocupantes o inusuales para que todos colaboradores envíen de manera directa al Oficial de Cumplimiento avisos sobre operaciones o conductas detectadas.
+            </p>
         </div>
     </div>
     
