commit -m 'anexo de pagina 19'

--- a/contenido/pag18.html
+++ b/contenido/pag18.html
@@ -7,6 +7,188 @@
     <title>Página 18</title>
 </head>
 <body>
-    Página 18
+    <div class="cuestionario">
+        <div class="contenedor2 activo">
+            <div class="contenedor1">
+                <figure class="persona1">
+                    <img src="/build/img/contenido/Pag18/persona1.svg" alt="persona 1">
+                </figure>
+                <div class="cuadro-azul">
+                    <p class="txt-azul">
+                        ¡Has terminado la primera parte de tu curso PLD!  Veamos cuánto aprendiste. Lee con cuidado cada enunciado que se te presentará y elige si es VERDADERO o FALSO. Si estás listo da 
+                        clic en el botón INICIAR.
+                    </p>
+                </div>
+            </div>
+            <div class="iniciar">
+                <button>Iniciar</button>
+            </div>
+        </div>
+        <div class="pregunta" id="pregunta 1">
+            <div class="niv1preg">
+                <div class="num">
+                    <p>1.</p>
+                </div>
+                <div class="txt-preg">
+                    <p>
+                        Al menos una vez al año, las Compañías deben identificar que los expedientes clasificados
+                        como ALTO RIESGO estén actualizados y completos.
+                    </p>
+                </div>
+            </div>
+            
+            <div class="cuadro-res">
+                <div class="opcion">
+                    <div class="cuadro-txt">
+                        <p>VERDADERO</p>
+                    </div>
+                    <div class="resultado" data-res="1">
+                        <img src="/build/img/contenido/Pag18/i-verdadero.svg">
+                    </div>
+                </div>
+                <div class="opcion">
+                    <div class="cuadro-txt">
+                        <p>FALSO</p>
+                    </div>
+                    <div class="resultado">
+                        <img src="/build/img/contenido/Pag18/i-falso.svg">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="pregunta" id="pregunta 2">
+            <div class="niv1preg">
+                <div class="num">
+                    <p>2.</p>
+                </div>
+                <div class="txt-preg">
+                    <p>
+                        Una Operación relevante es aquella realizada por los Colaboradores relacionadas con 
+                        el LD y FT.
+                    </p>
+                </div>
+            </div>
+            <div class="cuadro-res">
+                <div class="opcion">
+                    <div class="cuadro-txt">
+                        <p>VERDADERO</p>
+                    </div>
+                    <div class="resultado" data-res="0">
+                        <img src="/build/img/contenido/Pag18/i-falso.svg">
+                    </div>
+                </div>
+                <div class="opcion">
+                    <div class="cuadro-txt">
+                        <p>FALSO</p>
+                    </div>
+                    <div class="resultado" data-res="1">
+                        <img src="/build/img/contenido/Pag18/i-verdadero.svg">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="pregunta" id="pregunta 3">
+            <div class="niv1preg">
+                <div class="num">
+                    <p>3.</p>
+                </div>
+                <div class="txt-preg">
+                    <p>
+                        La herramienta que nos permite dejar constancia de la entrevista es el Formato de Identificación del Cliente con prima anual mayor a $7,500 dólares, para el caso de General de Seguros y General de Salud. Para el caso de Reaseguradora Patria es el Formato de Identificación de la Cedente.
+                    </p>
+                </div>
+            </div>
+            <div class="cuadro-res">
+                <div class="opcion">
+                    <div class="cuadro-txt">
+                        <p>VERDADERO</p>
+                    </div>
+                    <div class="resultado" data-res="1">
+                        <img src="/build/img/contenido/Pag18/i-verdadero.svg">
+                    </div>
+                </div>
+                <div class="opcion">
+                    <div class="cuadro-txt">
+                        <p>FALSO</p>
+                    </div>
+                    <div class="resultado" data-res="0">
+                        <img src="/build/img/contenido/Pag18/i-falso.svg">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="pregunta" id="pregunta 4">
+            <div class="niv1preg">
+                <div class="num">
+                    <p>4.</p>
+                </div>
+                <div class="txt-preg">
+                    <p>
+                        Un expediente de identificación debe resguardarse durante 5 años.
+                    </p>
+                </div>
+            </div>
+            <div class="cuadro-res">
+                <div class="opcion">
+                    <div class="cuadro-txt">
+                        <p>VERDADERO</p>
+                    </div>
+                    <div class="resultado" data-res="0">
+                        <img src="/build/img/contenido/Pag18/i-falso.svg">
+                    </div>
+                </div>
+                <div class="opcion">
+                    <div class="cuadro-txt">
+                        <p>FALSO</p>
+                    </div>
+                    <div class="resultado" data-res="1">
+                        <img src="/build/img/contenido/Pag18/i-verdadero.svg">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="pregunta" id="pregunta 5">
+            <div class="niv1preg">
+                <div class="num">
+                    <p>5.</p>
+                </div>
+                <div class="txt-preg">
+                    <p>
+                        Los expedientes incompletos generan sanciones por parte de la autoridad.
+                    </p>
+                </div>
+            </div>
+            <div class="cuadro-res">
+                <div class="opcion">
+                    <div class="cuadro-txt">
+                        <p>VERDADERO</p>
+                    </div>
+                    <div class="resultado" data-res="1">
+                        <img src="/build/img/contenido/Pag18/i-verdadero.svg">
+                    </div>
+                </div>
+                <div class="falso">
+                    <div class="cuadro-txt">
+                        <p>FALSO</p>
+                    </div>
+                    <div class="opcion" data-res="0">
+                        <img src="/build/img/contenido/Pag18/i-falso.svg">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="contenedor3">
+            <figure class="persona1">
+                <img src="/build/img/contenido/Pag18/persona1.svg" alt="persona 1 foot">
+            </figure>
+            <div class="cuadro-verde">
+                <div class="cuadro-blanco">
+                    <p>
+                        ¡Muy bien! Espero que esta actividad te haya refrescado la memoria, ahora continuemos con la segunda parte de tu curso PLD/CFT.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
