--- a/contenido/pag19.html
+++ b/contenido/pag19.html
@@ -7,6 +7,43 @@
     <title>Página 19</title>
 </head>
 <body>
-    Página 19
+    <div class="titulo-verde">
+
+    </div>
+    <div class="contenido">
+        <figure class="persona1">
+            <img src="/build/img/contenido/Pag19/persona1.svg" alt="persona1">
+        </figure>
+        <div class="rec1">
+            <ul>
+                <li>
+                    Se incorpora la  identificación de compradores  de salvamentos y entidades fiduciarias.
+                </li>
+            </ul>
+        </div>
+        <div class="rec2">
+            <ul>
+                <li>
+                    Verificación de los datos y documentos que nuestros posibles clientes nos proporcionen para acreditar su identidad, podrá realizarse de forma no presencial; igualmente para contrataciones, la entrevista podrá realizarse de forma no presencial. En ambos casos conforme a las disposiciones que al efecto emita la Comisión.
+                </li>
+                <li>
+                    Contar con medidas para mitigar el alto Riesgo.
+                </li>
+                <figure class="vinoculares">
+                    <img src="/build/img/contenido/Pag19/vinoculares.svg" alt="">
+                </figure>
+            </ul>
+        </div>
+        <div class="rec3">
+            <ul>
+                <li>
+                    Las Compañías podrán suspender el proceso de  identificación cuando se estime de forma razonable que nuestros posibles clientes se encuentran relacionados con operaciones de lavado de dinero o alguno de los riesgos previstos en el Manual de Cumplimiento PLD/CFT.
+                </li>
+            </ul>
+        </div>
+        <figure class="persona2">
+            <img src="/build/img/contenido/Pag19/persona2.svg" alt="persona 2">
+        </figure>
+    </div>
 </body>
 </html>
