--- a/contenido/pag17.html
+++ b/contenido/pag17.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Metodología de Evaluación de Riesgos PLD/CFT</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+	
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+	<script src="js/slider.js"></script>
 </head>
 <body>
     <div class="contenedor1">
@@ -54,10 +59,76 @@
             <img src="/build/img/contenido/Pag17/persona-computadora.svg" alt="persona computadora">
         </figure>
         <div class="dialogo3">
-            <p>
+            <p class="text-globo">
                 En la intranet de las Aseguradoras y de la Reaseguradora, se cuenta con el Buzón de Denuncia para operaciones internas preocupantes o inusuales para que todos colaboradores envíen de manera directa al Oficial de Cumplimiento avisos sobre operaciones o conductas detectadas.
             </p>
         </div>
+    </div>
+    <div class="carrusel">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="slide">
+                    <p class="txt-slide">
+                        El cliente se niega a proporcionar datos o documentos de identificación 
+                        del Cliente presenta información que pudiera ser apócrifa o falsa necesarios 
+                        para la contratación. 
+                    </p>
+                    <figure>
+                        <img src="/build/img/contenido/Pag17/slide1.svg" alt="slide 1">
+                    </figure>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="slide">
+                    <p class="txt-slide">
+                        Cuando los clientes intenten sobornar, persuadir o intimidar a los Colaboradores con el propósito de realizar actividades u operaciones inusuales en contra de la Ley o de las Políticas Internas.
+                    </p>
+                    <figure>
+                        <img src="/build/img/contenido/Pag17/slide2.svg" alt="slide 2">
+                    </figure>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="slide">
+                    <p class="txt-slide">
+                        La apariencia del cliente o su domicilio no concuerdan con la información.
+                    </p>
+                    <figure>
+                        <img src="/build/img/contenido/Pag17/slide3.svg" alt="slide 3">
+                    </figure>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="slide">
+                    <p class="txt-slide">
+                        La apariencia del cliente o su domicilio no concuerdan con la información.
+                    </p>
+                    <figure>
+                        <img src="/build/img/contenido/Pag17/slide4.svg" alt="slide 4">
+                    </figure>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="slide">
+                    <p class="txt-slide">
+                        La apariencia del cliente o su domicilio no concuerdan con la información.
+                    </p>
+                    <figure>
+                        <img src="/build/img/contenido/Pag17/slide5.svg" alt="slide 5">
+                    </figure>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
     </div>
     
     
