--- a/contenido/pag19.html
+++ b/contenido/pag19.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <div class="titulo-verde">
-
+        <p>
+            En la politica de identificación
+        </p>
     </div>
-    <div class="contenido">
+    <div class="contenido2">
         <figure class="persona1">
             <img src="/build/img/contenido/Pag19/persona1.svg" alt="persona1">
         </figure>
@@ -24,10 +26,14 @@
         <div class="rec2">
             <ul>
                 <li>
-                    Verificación de los datos y documentos que nuestros posibles clientes nos proporcionen para acreditar su identidad, podrá realizarse de forma no presencial; igualmente para contrataciones, la entrevista podrá realizarse de forma no presencial. En ambos casos conforme a las disposiciones que al efecto emita la Comisión.
+                    <p>
+                        Verificación de los datos y documentos que nuestros posibles clientes nos proporcionen para acreditar su identidad, podrá realizarse de forma no presencial; igualmente para contrataciones, la entrevista podrá realizarse de forma no presencial. En ambos casos conforme a las disposiciones que al efecto emita la Comisión.
+                    </p>
                 </li>
                 <li>
-                    Contar con medidas para mitigar el alto Riesgo.
+                    <p>
+                        Contar con medidas para mitigar el alto Riesgo.
+                    </p>
                 </li>
                 <figure class="vinoculares">
                     <img src="/build/img/contenido/Pag19/vinoculares.svg" alt="">
@@ -41,9 +47,111 @@
                 </li>
             </ul>
         </div>
-        <figure class="persona2">
-            <img src="/build/img/contenido/Pag19/persona2.svg" alt="persona 2">
+        <figure class="contenedor2">
+            <figure class="persona2">
+                <img src="/build/img/contenido/Pag19/persona2.svg" alt="persona 2">
+            </figure>
         </figure>
+    </div>
+    <div class="cuadro-naranja">
+        <p>
+            Se adiciona un capítulo de Enfoque Basado en Riesgo.
+        </p>
+    </div>
+    <div class="contenido3">
+        <div class="contenido4">
+            <div class="contenido8">
+                <div class="titulo-azul">
+                    <p>
+                        Para implementar:
+                    </p>
+                </div>
+                <div class="cuadro-blanco">
+                    <p>
+                        Una metodología de Evaluación de Grado de Riesgos que permita identificar el riesgo de Lavado de Dinero y financiamiento al Terrorismo al que se encuentra expuesta la Compañía. 
+                    </p>
+                </div>
+            </div>
+            <figure class="persona-pizarra">
+                <img src="/build/img/contenido/Pag19/persona-pizarra.svg" alt="persona pizarra">
+            </figure>
+        </div>
+        <div class="contenido5">
+            <div class="titulo-verde">
+                <p>
+                    En la Política de Conocimiento:
+                </p>
+            </div>
+            <div class="cuadro2-blanco">
+                <div class="globo1">
+                    <p>
+                        En operaciones celebradas de forma no presencial, deberá obtenerse la información relativa a la geolocalización.
+                    </p>
+                </div>
+                <figure class="persona-esc">
+                    <img src="/build/img/contenido/Pag19/persona-esc.svg" alt="persona escritorio">
+                </figure>
+            </div>
+            <div class="contenido6">
+                <div class="globo2">
+                    <p>
+                        Se adiciona un riesgo medio entre alto y bajo a la clasificación del grado de riesgo de  los clientes.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="contenido10">
+        <div class="contenido11">
+            <div class="cuadro-naranja">
+                <p>
+                    En Operaciones Relevantes, Inusuales e Internas Preocupantes: 
+                </p>
+            </div>
+            <div class="cuadro-amarillo">
+                <p>
+                    En Estructuras Internas:
+                </p>
+            </div>
+            <div class="cuadro-azul">
+                <p>
+                    En Capacitación y Difusión:
+                </p>
+            </div>
+        </div>
+        <div class="contenido12">
+            <div class="cuadro naranja">
+                <figure id="img1">
+                    <img src="/build/img/contenido/Pag19/billete-nj.svg" alt="icono billetes">
+                </figure>
+                Ahora las operaciones <b>relevantes</b> se reportarán por un monto igual o superior a <b>$7,500</b> dólares de los Estados Unidos.
+            </div>
+            <div class="cuadro naranja">
+                <figure id="img2">
+                    <img src="/build/img/contenido/Pag19/calendario-nj.svg" alt="icono calendario">
+                </figure>
+                <b>Las operaciones inusuales e internas preocupantes</b>  deberán ser enviadas a la autoridad dentro de los tres días siguientes a que el Comité de Comunicación y Control las haya dictaminado con ese carácter.
+            </div>
+            <div class="cuadro amarillo">
+                <figure id="img3">
+                    <img src="/build/img/contenido/Pag19/escudo-am.svg" alt="icono escudo">
+                </figure>
+                Podrá nombrarse a un <b>Oficial de Cumplimiento</b> interino, en caso de ausencia temporal del mismo.
+            </div>
+            <div class="cuadro azul">
+                <figure id="img4">
+                    <img src="/build/img/contenido/Pag19/maestro-azul.svg" alt="icono maestro-azul">
+                </figure>
+                La Capacitación deberá ser tomada <b>también por los miembros de los Consejos de Administración.</b>
+            </div>
+        </div>
+        <div class="contenido13">
+            <div class="cuadro-negro">
+                <p>
+                    Se adicionan capítulos de Modelos Novedosos de Intercambio de Información entre entidades, así como de Listas de Personas Bloqueadas.
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
