:fire: ejercicio drag

--- a/contenido/pag24.html
+++ b/contenido/pag24.html
@@ -90,6 +90,61 @@
                 </figure>
             </div>
         </div>        
-    </div>   
+    </div> 
+    
+    <div id="cont-lavado-dinero">
+        <div id="cont-lavado">
+            <div class="visual">
+                <div class="cont-titulo">
+                    <h3>Lavado de Dinero</h3>
+                </div>
+                <div class="cont-imagen">
+                    <img src="./build/img/contenido/Pag24/soborno.svg" alt="soborno">
+                </div>
+            </div>
+            <div class="lista-info">
+                <ul>
+                    <li>5 a 15 años de prisión y de 1000 a 5000 días de multa.</li>
+                    <li>Las penas señaladas se aumentarán un tercio o una mitad cuando se tiene el carácter de consejero, administrador, funcionario, empleado, apoderado o prestador de servicios de la empresa; o se realicen dentro de los dos siguientes años de haberse separado del cargo. </li>
+                    <li>Inhabilitación del cargo por el tiempo igual al de la pena en prisión impuesta.</li>
+                    <li>La pena se duplica si el puesto era de servidor público más inhabilitación y se agrava si se involucra a menores de 18 años.</li>
+                </ul>
+            </div>
+        </div>
+        <div id="cont-terrorismo">
+            <div class="lista-info">
+                <ul>
+                    <li>15 a 40 años de prisión y de 400 a 1200 días de multa.</li>
+                    <li>Encubrimiento nacional: 1 a 9 años de prisión y 100 a 300 días de multa.</li>
+                    <li>Encubrimiento internacional: 5 a 10 años de prisión y 100 a 300 días de multa.</li>
+                    <li>Amenaza de cometer delito nacional: 5 a 15 años de prisión y 200 a 600 días de multa.</li>
+                    <li>Amenaza de cometer delito internacional: 6 a 12 años de prisión y 200 a 600 días de multa.</li>
+                </ul>
+            </div>
+            <div class="visual">
+                <div class="cont-titulo">
+                    <h3>Financiamiento al Terrorismo</h3>
+                </div>
+                <div class="cont-imagen">
+                    <img src="./build/img/contenido/Pag24/terrorista.svg" alt="terrorista">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="cont-final24">
+        <div class="cont-imagen">
+            <img src="./build/img/contenido/Pag24/mujer-noticia.svg" alt="noticia">
+        </div>
+
+        <div class="cont-globo">
+            <div class="globo">
+                <p>
+                    El marco legal mexicano se compone de la Ley de Instituciones de Seguros y de Fianzas, el Código Penal Federal, Disposiciones de Carácter General a que se refiere el artículo 492 de la Ley de Instituciones de Seguros y de Fianzas, aplicables a Instituciones y sociedades mutualistas de seguros (LISF), así como el Código Penal Federal y el Código Nacional de Procedimientos Penales.
+                </p>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
